[tool.poetry]
name = "netbox-loadtest"
version = "2.0.0"
description = "A load test script for the netbox IPAM solution."
authors = ["Jarrod J Manzer <jjmanzer@godaddy.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
  { include = "netbox_loadtest.py" },
  { include = "helpers/*.py" },
]
repository = "https://github.com/jjmanzer/netbox-loadtest/"

[tool.poetry.scripts]
netbox-loadtest = "netbox_loadtest:start"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.23.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
isort = "^4.3.21"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
